# ccp4-autotools

./: Makefile.am  ccp4-6.0.2-setup.sh.in  configure.ac
doc/: Makefile.am  doc2man.pl
etc/: Makefile.am
help/: Makefile.am
html/: Makefile.am
include/: Makefile.am
lib/: Makefile.am
lib/clipper/: Makefile.am
lib/clipper/clipper/: Makefile.am
lib/clipper/clipper/ccp4/: Makefile.am
lib/clipper/clipper/cctbx/: Makefile.am
lib/clipper/clipper/cns/: Makefile.am
lib/clipper/clipper/contrib/: Makefile.am
lib/clipper/clipper/core/: Makefile.am
lib/clipper/clipper/minimol/: Makefile.am
lib/clipper/clipper/mmdb/: Makefile.am
lib/clipper/clipper/mmdbold/: Makefile.am
lib/clipper/clipper/phs/: Makefile.am
lib/clipper/html/: Makefile.am
lib/data/: Makefile.am
lib/lapack/blas/src/: Makefile.am
lib/src/: Makefile.am
lib/src/mmdb/: Makefile.am
lib/ssm/: Makefile.am
manual/: Makefile.am
src/: Makefile.am
trunk/: ChangeLog.autotools  Makefile.am  README.autotools  ccp4-6.0.2-setup.sh.in  configure.ac
trunk/ccp4i/: Makefile.am
trunk/config/: ccif_strdup.m4
trunk/doc/: Makefile.am
trunk/html/: Makefile.am
trunk/include/: Makefile.am
trunk/lib/: Makefile.am
trunk/lib/ccif/: Makefile.am
trunk/lib/clipper/: Makefile.am
trunk/lib/clipper/clipper/ccp4/: Makefile.am
trunk/lib/clipper/clipper/cif/: Makefile.am
trunk/lib/clipper/clipper/cns/: Makefile.am
trunk/lib/clipper/clipper/core/: Makefile.am
trunk/lib/clipper/clipper/mmdb/: Makefile.am
trunk/lib/clipper/clipper/mmdbold/: Makefile.am
trunk/lib/clipper/clipper/mtz/: Makefile.am
trunk/lib/clipper/clipper/phs/: Makefile.am
trunk/lib/clipper/dox/: Makefile.am
trunk/lib/clipper/examples/: Makefile.am
trunk/lib/clipper/macros/: Makefile.am
trunk/lib/clipper/src/: Makefile.am
trunk/lib/clipper/src/pirate/: Makefile.am
trunk/lib/data/: Makefile.am
trunk/lib/lapack/: Makefile.am
trunk/lib/lapack/src/: Makefile.am
trunk/lib/src/: Makefile.am
trunk/lib/ssm/: Makefile.am
trunk/manual/: Makefile.am
trunk/src/: Makefile.am
trunk/x-windows/Rotgen/: Makefile.am
trunk/x-windows/hklview_/: Makefile.am
trunk/x-windows/ipdisp/: Makefile.am
trunk/x-windows/libjwc/: Makefile.am
trunk/x-windows/libjwc/libjwc_c/: Makefile.am
trunk/x-windows/libjwc/libjwc_f/: Makefile.am
trunk/x-windows/xdl_view/: Makefile.am
trunk/x-windows/xdl_view/src/: Makefile.am
trunk/x-windows/xdlgjk/: Makefile.am
unsupported/: Makefile.am
unsupported/src/: Makefile.am
x-windows/: Makefile.am
x-windows/Rotgen/: Makefile.am
x-windows/XCCPJIFFY/: Makefile.am
x-windows/xdl_view/src/: Makefile.am
x-windows/xdlgjk/: Makefile.am
