## -*- mode: Makefile ; mode: font-lock -*- 
## Version: $Id: Makefile.am,v 0.0 2007/05/24 20:54:42 mok Exp $
## Author: mok@bioxray.dk
## Copyright 2007 Morten Kjeldgaard
## This code is distributed under the GPL license.

bin_SCRIPTS = \
amore-sphere arp_waters_plots.sh astex_viewer  \
ccp4faq ccp4keys disorder.awk extractsummary gfac2pdb ipdisp \
mtzdmp procheck procheck_comp proplot proplot_comp  tcl2html \
top3d topsearch uniqueify

####
