## -*- mode: Makefile ; mode: font-lock -*-
## $Id: Makefile.am 342 2007-05-15 20:27:57Z mok $

# Build in these directories
SUBDIRS = lib src unsupported/src  x-windows
ACLOCAL_AMFLAGS = -I config

#Distribute these directories:
DIST_SUBDIRS = $(SUBDIRS)

pkgconfigdir = $(libdir)/config

EXTRA_DIST = bootstrap

####
