## -*- mode: Makefile ; mode: font-lock -*- 
## Version: $Id: Makefile.am,v 0.0 2007/05/22 18:08:58 mok Exp $
## Author: mok@bioxray.dk
## Copyright 2007 Morten Kjeldgaard
## This code is distributed under the GPL license.

# Build in these directories

SUBDIRS = xdl_view/src libjwc/libjwc_c libjwc/libjwc_f xdlgjk Rotgen \
  hklview_ XCCPJIFFY ipdisp

#Distribute these directories:
DIST_SUBDIRS =  $(SUBDIRS)

####
